refactor: update to Vite, fix price formatting, and cleanup variables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul class="nav_links">
                     <li><button id="home_nav">Home</button></li>
                     <li class="dropdown">
-                        <button class="dropbtn">Shop <span class="carrot">&#9660</span></button>
+                        <button class="dropbtn">Shop <span class="carrot">&#9660;</span></button>
                         <div class="dropdown-content">
                             <button class="product_nav" id="lips">Lips</button>
                             <button class="product_nav" id="eyes">eyes</button>
@@ -76,6 +76,6 @@
             All right reserved.
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
